--- a/Lista02/Lista02.cbp
+++ b/Lista02/Lista02.cbp
@@ -31,7 +31,13 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="main.c">
+		<Unit filename="Bolha.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Insercao.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Selecao.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions />
